--- a/angular/src/app/login/login.component.html
+++ b/angular/src/app/login/login.component.html
@@ -1,10 +1,39 @@
 
+
+
 <div class="first-container">
-
+    
     <div class="second-container">
+        
 
-        <p>login works!</p>
+
+
+
+        <div *ngIf="this.regist==false" class="forms">
+
+            <h1 class="formHeadline">Login</h1>
+
+            <app-login-form></app-login-form>
+
+            <a (click)='this.regist = true;' class="registerLoginSwitch">Registrieren</a>
+        </div>
+
+
+
+
+
+        <div *ngIf="this.regist==true">
+
+            <h1 class="formHeadline">Registrieren</h1>
+            
+            <app-register-form></app-register-form>
+
+            <a (click)='this.regist = false;' class="registerLoginSwitch">Login</a>
+        </div>
+
+
+
 
     </div>
-
+    
 </div>
