Daten werden über den HttpClient (Angular) an Quarkus (Backend) gesendet und in der PostgresDB wird dann überprüft, ob der User in der USERS-Tabelle eingetragen ist. Falls ja dann wird TRUE zurückgeliefert, andernfalls FALSE. Auch wurde ein Formular erzeugt, welches auf Template-Driven basiert. Genauso wurden in den application.properties die ,,cors" angepasst, damit Quarkus Anfragen von Angular annimmt und nicht ablehnt.

--- a/angular/src/app/login/login-form/login-form.component.html
+++ b/angular/src/app/login/login-form/login-form.component.html
@@ -1,1 +1,18 @@
 
+<form #loginFormular="ngForm" (ngSubmit)="login(loginFormular.value)">
+
+    <label for="email">Email:<br>
+    <input type="email" name="email" ngModel></label>
+
+    <br>
+    <br>
+
+    <label for="password">Password:<br>
+    <input type="password" name="password" ngModel></label>
+
+    <br>
+    <br>
+
+    <input type="submit" name="loginBtn" value="Login">
+
+</form>
