--- a/angular/src/app/login/login.component.css
+++ b/angular/src/app/login/login.component.css
@@ -17,6 +17,9 @@
     position: relative;
     border-top: 1rem solid #eaeaea;
     border-bottom: 1rem solid #eaeaea;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .registerLoginSwitch:hover{
@@ -34,4 +37,5 @@
 .formHeadline{
     color: red;
     text-align: center;
+    margin-bottom: 5rem !important;
 }
