In Angular ein Formular-Gerüst für das Registrieren erstellt und dieses auch formatiert. Genauso den ersten Router in app.module.ts hinzugefügt.

--- a/angular/src/app/login/register-form/register-form.component.html
+++ b/angular/src/app/login/register-form/register-form.component.html
@@ -1,1 +1,53 @@
 
+<form>
+
+    <label for="vorname">Vorname:<br>
+    <input type="text" name="vorname" id="vorname" ngModel></label>
+    
+    <br>
+    <br>
+    
+    <label for="nachname">Nachname:<br>
+    <input type="text" name="nachname" id="nachname" ngModel></label>
+
+    <br>
+    <br>
+
+    <label for="email">Email:<br>
+    <input type="email" name="email" id="email" ngModel></label>
+
+    <br>
+    <br>
+
+    <label for="password">Password:<br>
+    <input type="password" name="password" id="password" ngModel></label>
+
+    <br>
+    <br>
+
+    <div class="flex">
+
+        <div>
+            <p>Geschlecht:</p>
+            <br>
+            <label for="male">M: </label>
+            <input type="radio" value="0" name="gender" id="male">
+            <br>
+            <label for="women">W: </label>
+            <input type="radio" value="1" name="gender" id="women">
+        </div>
+
+        <div class="flex">
+            <label for="age">Alter:
+                <br>
+                <input type="range" name="age" max="16" max="80" value="0" #val (mousemove)="sliderValue = val.value">
+            </label>
+
+            <p class="sliderValue">{{sliderValue}}</p>
+        </div>
+
+    </div>
+
+    <input type="submit" name="loginBtn" value="Login">
+
+</form>
