Registrier-Formular erzeugt mit Reactive-driven-forms, aber noch keine HTTP-Anfrage gestellt.

--- a/angular/src/app/login/login-form/login-form.component.css
+++ b/angular/src/app/login/login-form/login-form.component.css
@@ -3,3 +3,11 @@ form input{
     width: 20rem;
     height: 3rem;
 }
+
+.ng-valid{
+    border-color: green;
+}
+
+.ng-invalid{
+    border-color: red;
+}
