--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -3,3 +3,6 @@ html, body, * {
     padding: 0 !important;
     margin: 0 !important;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
