--- a/angular/src/app/login/register-form/register-form.component.html
+++ b/angular/src/app/login/register-form/register-form.component.html
@@ -1,7 +1,55 @@
 
 <form [formGroup]="registerForm" (ngSubmit)="register()">
 
-    <label for="vorname">Vorname:<br>
+
+
+
+
+    
+
+
+
+
+</form>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- <label for="vorname">Vorname:<br>
     <input type="text" name="vorname" id="vorname" formControlName="vorname"></label>
     
     <br>
@@ -48,6 +96,4 @@
 
     </div>
 
-    <input type="submit" name="loginBtn" value="Login">
-
-</form>
+    <input type="submit" name="loginBtn" value="Login"> -->
