--- a/angular/src/app/login/login-form/login-form.component.css
+++ b/angular/src/app/login/login-form/login-form.component.css
@@ -1,13 +1,16 @@
-
-form input{
-    width: 20rem;
-    height: 3rem;
+.example-container mat-form-field + mat-form-field {
+  margin-left: 8px;
 }
 
-.ng-valid{
-    border-color: green;
+.example-right-align {
+  text-align: right;
 }
 
-.ng-invalid{
-    border-color: red;
+input.example-right-align::-webkit-outer-spin-button,
+input.example-right-align::-webkit-inner-spin-button {
+  display: none;
+}
+
+input.example-right-align {
+  -moz-appearance: textfield;
 }
