--- a/angular/src/app/login/login.component.css
+++ b/angular/src/app/login/login.component.css
@@ -1,41 +1,9 @@
 
-
-.first-container{
-    height: 100vh;
-    width: 100vw;
-    background: linear-gradient(90deg, #f00000,#0800ec);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.second-container{
-    height: 70%;
-    width: 30%;
-    background-color: white;
-    border-radius: 3rem;
-    position: relative;
-    border-top: 1rem solid #eaeaea;
-    border-bottom: 1rem solid #eaeaea;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.registerLoginSwitch:hover{
-    cursor: pointer;
-    text-decoration: underline;
-    color: #f00000;
-}
-
-.registerLoginSwitch{
-    position: absolute;
-    bottom: 1rem;
-    right: 1rem;
-}
-
 .formHeadline{
-    color: red;
-    text-align: center;
-    margin-bottom: 5rem !important;
+    color: #1A237E;
+    text-align: center;    
+}
+
+.height{
+    height: 100vh;
 }
